# serverless-pipelines-in-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  invoke_pipeline.sh  requirements.txt
analytics/: 1_trip_stats_plot.py  2_geo_plot.py  basic_plotting.py  jupyter_notebook_nyc_taxis.ipynb
nyc_taxi_data/: download_data.py  download_urls.txt
src/: lambda_main.rs  lib.rs  main.rs  queries.rs
